syntax = "proto3";

package calculator;
option go_package = "src/calculatorpb";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

message DecomposePrimeFactorRequest {
  int64 number = 1;
}

message DecomposePrimeFactorResponse {
  int64 prime_factor = 1;
}

service CalculatorService {
  // Unary
  rpc Sum(SumRequest) returns (SumResponse) {};

  // Server Streaming
  rpc DecomposePrimeFactor(DecomposePrimeFactorRequest) returns (stream DecomposePrimeFactorResponse) {};
}
